[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "sqlmodel>=0.0.37",
    "uuid7-standard>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
